--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,15 @@
   }
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
+  height: 100vh;
+  width: 100vw;
+  overflow: none;
+  display: flex;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
